#                                                                                                          #
############################################################################################################


For more details, please see the README file.


, 2024, AnnotSV version 3.4.3
	- Add alias gene symbols in the OMIM annotations file

May, 14, 2024, AnnotSV version 3.4.2
	- Fix a bug when setting the cytoband annotation for large SV (issue 234)
	- Update the mm39 repeat annotations (issue 225)

May, 03, 2024, AnnotSV version 3.4.1
	- Update of the variantconvert distribution (2.0.1 installed)
	  Add of the "-variantconvertMode" option (to choose the variantconvert conversion mode)
	- Mouse annotation update (Add GRCm39/mm39 annotations)
	- Remove typos in the ranking explanation
	- Check the user bedtools version
	- Restricts the number of RE_gene features to 50, RE with "PhenoGenius specificity = "A" or Exomiser gene score > 0.7" are displayed first.
	- Integrate all the gene symbols for OMIM morbid annotations
	- Improve the creation of the benign dataset (gnomAD, 1000g and HPRC)
	- Add log files for the PhenoGenius install

February, 16, 2024, AnnotSV version 3.4
	- Human annotation update
	- Add new regulatory elements annotations:
		- Activity-by-Contact (ABC) model annotations (doi: 10.1038/s41586-021-03446-x)
		- Massively Parallel Reporter assays (MPRA) annotations (doi: 10.1038/s41467-019-11526-w)
	- Add novel benign SV annotation sources:
		- from gnomad v4 (GRCh38) (issue 201)
		- from the Human Pangenome Reference Consortium (HPRC) dataset (PACBIO long reads, GRCh38 only) (issue 202)
		- from dbVar (NCBI’s database of genomic structural variation)
	- Add new phenotype prioritization method: PhenoGenius (Yauy et al., 2023, doi: 10.1101/2022.07.29.22278181)
		- Add 3 new features: PhenoGenius_score, PhenoGenius_phenotype and PhenoGenius_specificity
	- Add 4 new features: 
		- Closest_left and Closest_right