@@ -34,19 +34,29 @@ proc switchCoordinatesFromBEDtoVCF {BEDcoord} {
 }
 
 proc switchAllCoordinatesFromBEDtoVCFinLine {lineCompleted} {
-    # lineCompleted: AnnotSV_ID   chrom   SV_start   ...
-    
+    # lineCompleted: AnnotSV_ID              chrom   SV_start   ...
+    # e.g.           15_1_20000000_DEL_1     15      1          ...
+ 
     # Formate "AnnotSV_ID" and "SV_start"
-    regexp "\[^\t\]+\t\[^\t\]+\t(\[0-9\]+)" $lineCompleted match SVstart
-    set formatedSVstart [expr {$SVstart+1}]; # Switch SV start coordinate from BED to VCF format
-    set i 0
-    if {[regexp -start $i -indices "$SVstart" $lineCompleted match_indices]} {
-        set i_start [lindex $match_indices 0]
-        set i_end   [lindex $match_indices 1]
-        set lineCompleted [string replace $lineCompleted $i_start $i_end $formatedSVstart]
-        set i [expr {$i_end+1}]
-    }
-    if {[regexp -start $i -indices "$SVstart" $lineCompleted match_indices]} {
+	# (switch SV start coordinate from BED to VCF format)
+    #####################################################
+
+	regexp "\[^\t\]+\t\[^\t\]+\t(\[0-9\]+)" $lineCompleted match SVstart
+    set formatedSVstart [expr {$SVstart+1}]
+
+    # Formate "AnnotSV_ID"
+	set AnnotSV_ID [lindex $lineCompleted 0]
+	set L_AnnotSV_ID [split $AnnotSV_ID "_"]
+	set updated_AnnotSV_ID [lindex $L_AnnotSV_ID 0]_${formatedSVstart}_[lindex $L_AnnotSV_ID 2]_[lindex $L_AnnotSV_ID 3]_[lindex $L_AnnotSV_ID 4]
+    set length_AnnotSV_ID [expr {[string length $AnnotSV_ID]-1}]
+    set lineCompleted [string replace $lineCompleted 0 $length_AnnotSV_ID $updated_AnnotSV_ID]
+	
+    # Formate "SV_start"
+    set chrom [lindex $lineCompleted 1]
+	set length_chrom [string length $chrom]
+    set length_updated_AnnotSV_ID [string length $updated_AnnotSV_ID]
+	set lengthTot [expr {$length_updated_AnnotSV_ID+$length_chrom}]
+    if {[regexp -start $lengthTot -indices "$SVstart" $lineCompleted match_indices]} {
         set i_start [lindex $match_indices 0]
         set i_end   [lindex $match_indices 1]
         set lineCompleted [string replace $lineCompleted $i_start $i_end $formatedSVstart]
@@ -62,6 +72,7 @@ proc switchAllCoordinatesFromBEDtoVCFinLine {lineCompleted} {
         set lineCompleted [string replace $lineCompleted $i_start $i_end [switchCoordinatesFromBEDtoVCF $BEDcoord]]
         set i [expr {$i_end+1}]
     }
+
     return $lineCompleted
 }
 
@@ -1418,6 +1429,7 @@ proc OrganizeAnnotation {} {
     
     foreach AnnotSV_ID $L_AnnotSV_ID {
         set AnnotSV_ID [lindex $AnnotSV_ID 0]
+
         foreach fullOrSplitLine $L_TextToWrite($AnnotSV_ID) {
             set AnnMo [lindex [split $fullOrSplitLine "\t"] $i_Annotation_mode]
             set geneName [lindex [split $fullOrSplitLine "\t"] $i_genename]
